--- a/Segundo_Semestre/Desenvolvimento_Web_HTML_CSS_JS_PHP/O_Ambiente_Web-Cliente_x_Servidor_e_as_Tecnologias/Exemplos_Praticos/Anexo-Aula007/externo/externo.html
+++ b/Segundo_Semestre/Desenvolvimento_Web_HTML_CSS_JS_PHP/O_Ambiente_Web-Cliente_x_Servidor_e_as_Tecnologias/Exemplos_Praticos/Anexo-Aula007/externo/externo.html
@@ -6,10 +6,12 @@
     <title>Externo</title>
 </head>
 <body>
-    <h1>Exemplo Inline</h1>
-    <button ondblclick="document.getElementById('lamp').src='../img/apagada.png'">Apagar</button>
-    <img src="../img/apagada.png" alt="img_lamp" id="lamp">
-    <button ondblclick="document.getElementById('lamp').src='../img/acessa.png'">Acender</button>
+    <h1>Exemplo Externo</h1>
+    <button id="apgButton">Apagar</button>
+    <img id="lamp" src="../img/apagada.png" alt="lampd">
+    <button id="acdButton">Acender</button>
+
+    <script src="externo.js"></script>
 
 </body>
 </html>
