--- a/Segundo_Semestre/Desenvolvimento_Web_HTML_CSS_JS_PHP/Linguagem_de_Marcacao_de_Hypertexto_HTML/Exemplos_Praticos/Aula006-Exemplos/Aula006-Listas.html
+++ b/Segundo_Semestre/Desenvolvimento_Web_HTML_CSS_JS_PHP/Linguagem_de_Marcacao_de_Hypertexto_HTML/Exemplos_Praticos/Aula006-Exemplos/Aula006-Listas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Listas em HTML</h1>
+    <p>Nesse exemplo eu vou estar mostrando alguns tipos de listas Ordenadas e não Ordenadas junto de uma lista de definição</p>
 
     <h2>Lista Ordenada</h2>
     <ol>
